# microclaw

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  NIXPKGS_README.md  README.md  README_CN.md  deny.toml  deploy.sh  docker-compose.yaml  install.ps1  microclaw.config.example.yaml  start.sh
.github/workflows/: ci.yml  release-assets.yml
crates/microclaw-app/: Cargo.toml
crates/microclaw-channels/: Cargo.toml
crates/microclaw-channels/src/: channel.rs  channel_adapter.rs
crates/microclaw-clawhub/: Cargo.toml
crates/microclaw-core/src/: llm_types.rs  redact.rs  text.rs
crates/microclaw-storage/: Cargo.toml
crates/microclaw-storage/src/: db.rs
crates/microclaw-tools/: Cargo.toml
crates/microclaw-tools/src/: runtime.rs
docs/: IMPLEMENTED.md  a2a.md  completion-contracts.md  concurrent-tasks-progress-reporting.md  cookbook.md  how-to-be-a-human.md  llm-provider-conventions.md  scheduled-task-lifecycle.md
docs/operations/: acp-stdio.md  concurrency-and-responsiveness.md  openclaw-weixin-bridge.md  openclaw-weixin.md  runbook.md  weixin.md
docs/releases/: pr-release-checklist.md  release-policy.md
docs/reports/: reliability-differentiation-2026-07.md
docs/rfcs/: 0005-subagents-runtime-v1.md
docs/roadmap/: stability-usability-roadmap-2026-q3.md
docs/test/eval-fixtures/: README.md
docs/test/eval-fixtures/negative/: dangling-tool-use.json
examples/openclaw-weixin/: README.md
scripts/: test_http_hooks.sh  trigger_release.ps1
scripts/ci/: stability_smoke.sh
skills/built-in/podcast/: SKILL.md
skills/built-in/write-book/: SKILL.md
src/: a2a.rs  acp.rs  acp_subagent.rs  agent_engine.rs  chat_commands.rs  codex_auth.rs  completion_contract.rs  config.rs  doctor.rs  gateway.rs  hapi_engine.rs  http_client.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory_backend.rs  memory_service.rs  outbox.rs  remote_agent.rs  runtime.rs  schedule_lifecycle.rs  scheduler.rs  setup.rs  skills.rs  turn_recovery.rs  web.rs
src/channels/: discord.rs  feishu.rs  mod.rs  slack.rs  telegram.rs  weixin.rs
src/clawhub/: cli.rs
src/tools/: a2a.rs  activate_skill.rs  bash.rs  generate_podcast.rs  mod.rs  render_pdf.rs  report_progress.rs  schedule.rs  send_message.rs  sub_agent.rs  subagents.rs  text_to_speech.rs
src/web/: a2a.rs  config.rs  governance.rs  skills.rs  stream.rs  ws.rs
tests/: config_validation.rs  db_integration.rs
web/: package-lock.json  package.json
web/src/: main.tsx  styles.css
web/src/components/: config-field-card.tsx  governance-panel.tsx  session-sidebar.tsx  skills-settings.tsx
web/src/lib/: api.ts
