[package]
name = "microclaw-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
journald = ["tracing-journald"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
include_dir = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = { version = "0.3", optional = true }
opentelemetry-appender-tracing = "0.30"
opentelemetry_sdk = "0.30"
microclaw-observability = { version = "0.1.0", path = "../microclaw-observability" }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
