[package]
name = "microclaw-channels"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
microclaw-storage = { version = "0.1.0", path = "../microclaw-storage" }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
